2004-01-10  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (rfc2047_encode_word): if e_iconv() returns
	-1, check that errno != EINVAL - if errno *is* EINVAL, it just
	means that our convlen wasn't long enough to include the whole
	sequence. This is fine, we'll just start where we left off next
	loop thru. Fixes bug #52593 (the buffer was duplicated because
	state wasn't flushed).
	(camel_header_encode_string): Fixed a type-o in loop where
	encoding=0, don't g_string_append_len starting at 'word'
	inptr-start bytes long - 'word' could be NULL and/or inptr-start
	could be longer than inptr-word.

2004-01-09  Rodney Dawes  <dobey@ximian.com>

	* providers/groupwise/Makefile.am (EXTRA_DIST): libcamelgroupwise.urls
	instead of libcamelimap.urls

2004-01-09  Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/groupwise-config-listener.c
	(is_groupwise_account): added null check for source url to take
	care of accounts with Server Types as "None"
 
2004-01-09  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-store.c (imap_forget_folder): fix
	removal of journal file, and remove the cmeta state file too.

	* providers/imap/camel-imap-folder.c (imap_getv): count up so we
	call parent class if we missed any, rather than only if we didn't
	miss any.
	(imap_rename): rename the object state file.
	(camel_imap_folder_new): set the object state file for persistent
	properties.

	* camel-disco-folder.c (disco_getv): support
	(PERSISTENT_)PROPERTIES & OFFLINE_SYNC.
	(disco_setv): implement OFFLINE_SYNC.
	(camel_disco_folder_get_type): setup disco properties list.
	(cdf_folder_changed): honour the offline_sync setting on the
	current folder.
	(disco_sync): save object state.
	(disco_setv): save object state if it changed.

	* camel-data-wrapper.c (camel_data_wrapper_set_mime_type_field):
	move assertions here.
	(set_mime_type_field): change order slightly to properly handle
	setting the same object.  removed assertions from internal method.
