@@ -1,3 +1,13 @@
+2004-01-12  Not Zed  <NotZed@Ximian.com>
+
+	** See bug 52725.
+
+	* providers/imap/camel-imap-folder.c (get_content): pass in
+	transfer encoding when setting up wrapper part.
+
+	* providers/imap/camel-imap-wrapper.c (camel_imap_wrapper_new):
+	Added an encoding type parameter, set on data wrapper.
+
 2004-01-10  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* camel-mime-utils.c (rfc2047_encode_word): if e_iconv() returns
